pixe id显示
