# src/api/respones.ts
@@ -108,6 +108,7 @@ export namespace AnalyticsResponse {
         description: string; // Transaction description
         email: string; // Account email
         payerEmail?: string; // Payment platform checkout email
+        pixelId?: string; // Facebook pixel ID from user
         name: string; // Customer name
         provider: string; // Payment provider
     }
